components/posts/ListStyles.module.css
/* Article Layout */
.articleLayout .shareIconCollections svg {
  margin: 0 8px;
  fill: #626262;
}
@media (min-width: 1025px) {
  .articleLayout {
    height: 100%;
  }
  .articleLayout .header {
    height: 350px;
    background: #696388;
    width: 100%;
    display: flex;
    justify-content: flex-end;
  }
  .articleLayout .header .contentWrapper {
    width: 100%;
    display: flex;
    margin-top: 88px;
  }
  .articleLayout .header .contentWrapper h2 {
    display: flex;
    align-items: center;
    position: relative;
    margin: 0 auto;
    width: 800px !important;
    color: white !important;
    z-index: 5;
    text-align: left !important;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    text-transform: capitalize !important;
  }
  .articleLayout .header .contentWrapper .imageWrapper {
    width: 50%;
    height: 300px;
    position: absolute;
    z-index: 1;
    right: 0;
    filter: brightness(80%);
    background: #696388;
  }
  .articleLayout .header .contentWrapper .imageWrapper img {
    height: 100%;
    width: 100%;
    object-fit: cover;
  }
  .articleLayout .linksContainer {
    margin: 32px auto;
    padding: 0 48px;
    max-width: 1067px;
    color: #626262;
  }
  .articleLayout .linksContainer p {
    margin-bottom: 8px;
  }
  .articleLayout .linksContainer .shareIconCollections svg {
    margin: 0 8px;
  }
  .articleLayout .contentContainer {
    margin: 48px auto;
    padding: 0 48px;
    max-width: 1067px;
    color: #2e2e2e;
  }
  .articleLayout .contentContainer .topWrapper {
    display: block;
    height: auto;
  }
  .articleLayout .contentContainer .topWrapper .topExcerpt {
    padding: 0 8px 8px 0;
    display: inline;
    float: left;
    width: 300px;
    word-break: break-word;
  }
  .articleLayout .contentContainer .topWrapper .topContent {
    display: inline;
  }
  .articleLayout .contentContainer .middleWrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 64px;
    margin-bottom: 32px;
    padding-top: 32px;
    clear: both;
  }
  .articleLayout .contentContainer .middleWrapper .image {
    min-width: 50%;
    position: relative;
    overflow: hidden;
    aspect-ratio: auto 1.86333333;
  }
  .articleLayout .contentContainer .middleWrapper .image img {
    height: 100%;
    width: 100%;
    object-fit: contain;
  }
  .articleLayout .contentContainer .middleWrapper .bottomExcerpt {
    width: 50%;
  }
  .articleLayout .contentContainer .excerpt p {
    font-size: 1.6rem !important;
    font-weight: 700 !important;
    line-height: 2rem !important;
  }
  .articleLayout .contentContainer .content p {
    font-size: 1.2rem !important;
    line-height: 1.5rem !important;
    margin: 16px 0 !;
  }
}
@media (max-width: 1024px) and (min-width: 770px) {
  .articleLayout {
    height: 100%;
  }
  .articleLayout .header {
    height: 300px;
    background: #696388;
    padding-left: 48px;
    width: 100%;
    display: flex;
    justify-content: flex-end;
  }
  .articleLayout .header .contentWrapper {
    width: 100%;
    display: flex;
    margin-top: 64px;
  }
  .articleLayout .header .contentWrapper h2 {
    display: flex;
    align-items: center;
    position: relative;
    margin: 0 auto;
    width: 800px;
    color: white !important;
    z-index: 5;
    text-align: left !important;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    text-transform: capitalize !important;
  }
  .articleLayout .header .contentWrapper .imageWrapper {
    width: 65%;
    height: 300px;
    position: absolute;
    z-index: 1;
    right: 0;
    filter: brightness(80%);
    background: #696388;
  }
  .articleLayout .header .contentWrapper .imageWrapper img {
    height: 100%;
    width: 100%;
    object-fit: cover;
  }
  .articleLayout .linksContainer {
    margin: 32px auto;
    padding: 0 64px;
    color: #626262 !important;
    font-size: 0.9rem !important;
  }
  .articleLayout .linksContainer p {
    margin-bottom: 8px;
  }
  .articleLayout .linksContainer .shareIconCollections svg {
    margin: 0 8px;
  }
  .articleLayout .contentContainer {
    margin: 32px auto;
    padding: 0 64px;
    color: #2e2e2e;
  }
  .articleLayout .contentContainer .topWrapper {
    display: block;
    height: auto;
  }
  .articleLayout .contentContainer .topWrapper .topExcerpt {
    display: inline;
    float: left;
    width: 270px;
    padding: 0 8px 8px 0;
    height: auto;
    word-break: break-word;
  }
  .articleLayout .contentContainer .topWrapper .topContent {
    display: inline;
  }
  .articleLayout .contentContainer .middleWrapper {
    padding-top: 32px;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 64px;
    margin-bottom: 32px;
    clear: both;
  }
  .articleLayout .contentContainer .middleWrapper .image {
    min-width: 50%;
    position: relative;
    overflow: hidden;
    aspect-ratio: auto 1.86333333;
  }
  .articleLayout .contentContainer .middleWrapper .image img {
    height: 100%;
    width: 100%;
    object-fit: cover;
  }
  .articleLayout .contentContainer .middleWrapper .bottomExcerpt {
    width: 50%;
    word-break: break-word;
  }
  .articleLayout .contentContainer .excerpt p {
    font-size: 1.3rem !important;
    font-weight: 700 !important;
    line-height: 1.6rem !important;
  }
  .articleLayout .contentContainer .content {
    font-size: 1rem !important;
  }
  .articleLayout .contentContainer .content p {
    line-height: 1.5rem !important;
    margin: 16px 0;
  }
}
/* ... */

